# AlbionScrapper

./: .gitignore  api.py  config.ini  main.py  update_kda.py
albion-api/: .isort.cfg  api.py  config.py  main.py  pyproject.toml  scrap_api.py  update.py  update_kda.py  web_scrapper.py
albion-api/core/: psql_connection.py
albion-api/database/: create_table.py  insert_rows.py  operations.py
albion-api/resources/: battles_response.json  player_id.txt
albion-api/resources/conf/: config.ini
albion-api/util/: psql_connection.py  session.py
data/: rendered.html
postgres/: postgre_scripts.sql
resources/: battles.json  rendered.html
