[tool.poetry]
name = "albion-api"
version = "0.1.0"
description = "Albion scripts for scrapping web killboard & inserting/updating database of players with information from public API"
authors = ["Ozerioss"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[tool.poetry.scripts]
web-scrapper = "web_scrapper:app"
api-scrapper = "scrap_api:app"
update-db = "update:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
